force-app/main/default/objects/ssot__MentoringProfile__dlm/fields/ssot__IsMentee__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsMentee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Mentee</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsMentee</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>