force-app/main/default/objects/ssot__MentoringProfile__dlm/fields/ssot__rel_1719819619047_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719819619047_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MentoringProfile_RelatedRecordId_map_rel</label>
    <referenceTo>ssot__ProgramEnrollment__dlm</referenceTo>
    <relationshipLabel>MentoringProfile_RelatedRecordId_map_rel</relationshipLabel>
    <relationshipName>rel_1719819619047_end</relationshipName>
    <type>Lookup</type>
</CustomField>