force-app/main/default/objects/ssot__MentoringProfile__dlm/fields/ssot__rel_1720291155928_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1720291155928_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MentoringProfile_ContactId_map_Indiv_rel</label>
    <referenceTo>ssot__Individual__dlm</referenceTo>
    <relationshipLabel>MentoringProfile_ContactId_map_Indiv_rel</relationshipLabel>
    <relationshipName>rel_1720291155928_end</relationshipName>
    <type>Lookup</type>
</CustomField>