force-app/main/default/objects/ssot__MentoringProfile__dlm/fields/ssot__RelatedRecordId__c.field-meta.xml
<CustomField>
    <fullName>ssot__RelatedRecordId__c</fullName>
    <label>Related Record</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RelatedRecordId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>